@@ -60,6 +60,9 @@ Release 1.1 (in development)
 Release 1.0.6 (in development)
 ==============================
 
+* #581: Fix traceback in Python domain for empty cross-reference
+  targets.
+
 * #283: Fix literal block display issues on Chrome browsers.
 
 * #383, #148: Support sorting a limited range of accented characters
